# uNOVA

./: CMakeLists.txt  README.md
doc/: nova.md  syscall_intercept技术介绍.md
finefs/: README.md  TODO.md  balloc.cc  bbuild.cc  dax.cc  dir.cc  file.cc  finefs.h  finefs_def.cc  finefs_def.h  inode.cc  journal.cc  journal.h  log.cc  namei.cc  nova.h  nova_cfg.h  salloc.cc  stats.cc  stats.h  super.cc  super.h  symlink.cc  vfs.h  vfs_api.cc  vfs_api.h  wprotect.cc  wprotect.h
myfilebench/: filebench.cc  filebench.h  fileserver.cc  varmail.cc  webproxy.cc  webserver.cc
nova/: TODO.md  balloc.cc  bbuild.cc  dax.cc  dir.cc  file.cc  inode.cc  journal.cc  journal.h  namei.cc  nova.h  nova_cfg.cc  nova_cfg.h  nova_com.h  nova_def.h  stats.cc  super.cc  super.h  symlink.cc  vfs.cc  vfs.h  vfs_api.cc  vfs_api.h  wprotect.cc  wprotect.h
perf/: ftruncate_test.cc  mkdir_test.cc  mmap_write_seq_test.cc  open_mix_unlink_test.cc  open_test.cc  open_vary_name_test.cc  small_rw_test.cc  small_write_rand_test.cc  small_write_seq_test.cc  test.sh  write_test.cc
script/: 4kb_write_rand_32.sh  code_stat.sh  small_write_rand.sh  small_write_rand_meta.sh  varmail.sh
syscall-intercept/: hook_finefs.cc  hook_native.cc  hook_nova.cc  hooks.cc  hooks.h  preload.cc
syscall-intercept-demo/: hooks.cc  hooks.h
test/: fstest.cc  nova_basic_test.cc  nova_recovery_files.cc  nova_recovery_test.cc  test.sh
test/filebench/: fileserver.f  mywebserver-t1.f  mywebserver.f  tmp.f  webserver.f
test/fio/: finefs_4k_32_vary_bs.fio  finefs_4k_base.fio  finefs_small_rw.fio  finefs_small_vary.fio  finefs_vary_bs.fio  finefs_vary_files.fio  finefs_vary_threads.fio  fio-seq_read.fio  nova_4k_base.fio  nova_seq_write.fio  nova_small_rw.fio  nova_small_vary.fio  nova_vary_bs.fio  nova_vary_files.fio  nova_vary_threads.fio
util/: aep.cc  aep.h  atomic.h  bitops.h  common.h  cpu.cc  cpu.h  crc.h  file.cc  file.h  list.h  lock.h  log.cc  log.h  mem.h  radix-tree.cc  radix-tree.h  rbtree.cc  rbtree.h  rbtree_agumented.h  statistics.cc  statistics.h  ticket_lock.h  util.h  util_cfg.h
vfs/: com.h  fs_cfg.cc  fs_cfg.h  vfs.cc  vfs.h  vfs_api.cc  vfs_api.h
